FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(SKIA REQUIRED skia)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE_DIRS})
LINK_DIRECTORIES(${SKIA_LIBRARY_DIRS})

PKG_CHECK_MODULES(AO REQUIRED ao)
INCLUDE_DIRECTORIES(${AO_INCLUDE_DIRS})
LINK_DIRECTORIES(${AO_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBAVCODEC REQUIRED libavcodec)
INCLUDE_DIRECTORIES(${LIBAVCODEC_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBAVCODEC_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBAVFORMAT REQUIRED libavformat)
INCLUDE_DIRECTORIES(${LIBAVFORMAT_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBAVFORMAT_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBAVUTIL REQUIRED libavutil)
INCLUDE_DIRECTORIES(${LIBAVUTIL_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBAVUTIL_LIBRARY_DIRS})

PKG_CHECK_MODULES(JSON REQUIRED json-c)
INCLUDE_DIRECTORIES(${JSON_INCLUDE_DIRS})
LINK_DIRECTORIES(${JSON_LIBRARY_DIRS})

include_directories(
	${CMAKE_SOURCE_DIR}/asst
	${CMAKE_SOURCE_DIR}/tool
	${CMAKE_BINARY_DIR}/tool
	${CMAKE_SOURCE_DIR}/tale
	${CMAKE_SOURCE_DIR}/show
	${CMAKE_SOURCE_DIR}/apps
	${CMAKE_SOURCE_DIR}/play
	${CMAKE_SOURCE_DIR}/navi
	)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -std=c++11")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS}")

add_executable(nemoplay-show
	nemoplay-show.c
	)

TARGET_LINK_LIBRARIES(nemoplay-show
	nemoplay
	nemoapps
	${AO_LIBRARIES}
	)

if(WITH_CEF)
	add_executable(nemonavi-show
		nemonavi-show.c
		)

	TARGET_LINK_LIBRARIES(nemonavi-show
		nemonavi
		nemoapps
		)
endif(WITH_CEF)

add_executable(nemomote-show
	nemomote-show.c
	)

TARGET_LINK_LIBRARIES(nemomote-show
	nemomote
	nemoapps
	)

if(WITH_OPENCL)
	PKG_CHECK_MODULES(OPENCL REQUIRED OpenCL)
	INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIRS})
	LINK_DIRECTORIES(${OPENCL_LIBRARY_DIRS})

	TARGET_LINK_LIBRARIES(nemomote-show
		${OPENCL_LIBRARIES}
		)
endif(WITH_OPENCL)

if(WITH_BULLET)
	PKG_CHECK_MODULES(BULLET REQUIRED bullet)
	INCLUDE_DIRECTORIES(${BULLET_INCLUDE_DIRS})
	LINK_DIRECTORIES(${BULLET_LIBRARY_DIRS})

	add_executable(nemophys-show
		nemophys-show.cpp
		)

	TARGET_LINK_LIBRARIES(nemophys-show
		nemoapps
		${BULLET_LIBRARIES}
		)
endif(WITH_BULLET)

add_executable(nemoglfx-show
	nemoglfx-show.c
	)

TARGET_LINK_LIBRARIES(nemoglfx-show
	nemoapps
	)

add_executable(nemoripple
	nemoripple.c
	)

TARGET_LINK_LIBRARIES(nemoripple
	nemoapps
	)

add_executable(nemolog
	nemolog.c
	)

TARGET_LINK_LIBRARIES(nemolog
	nemoasst
	)

INSTALL(TARGETS nemolog DESTINATION bin)

add_executable(nemokeys
	nemokeys.c
	)

TARGET_LINK_LIBRARIES(nemokeys
	nemoasst
	)

INSTALL(TARGETS nemokeys DESTINATION bin)

add_executable(nemonote
	nemonote.c
	)

TARGET_LINK_LIBRARIES(nemonote
	nemoasst
	${JSON_LIBRARIES}
	)

INSTALL(TARGETS nemonote DESTINATION bin)
