FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(PIXMAN REQUIRED pixman-1)
INCLUDE_DIRECTORIES(${PIXMAN_INCLUDE_DIRS})
LINK_DIRECTORIES(${PIXMAN_LIBRARY_DIRS})

PKG_CHECK_MODULES(FREETYPE REQUIRED freetype2)
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
LINK_DIRECTORIES(${FREETYPE_LIBRARY_DIRS})

PKG_CHECK_MODULES(HARFBUZZ REQUIRED harfbuzz)
INCLUDE_DIRECTORIES(${HARFBUZZ_INCLUDE_DIRS})
LINK_DIRECTORIES(${HARFBUZZ_LIBRARY_DIRS})

PKG_CHECK_MODULES(SKIA REQUIRED skia)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE_DIRS})
LINK_DIRECTORIES(${SKIA_LIBRARY_DIRS})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS}")

include_directories(
	${CMAKE_SOURCE_DIR}/asst
	${CMAKE_SOURCE_DIR}/helper
	${CMAKE_SOURCE_DIR}/tool
	${CMAKE_BINARY_DIR}/tool
	)

add_library(nemotoyz SHARED
	nemotoyz.cpp
	toyzstyle.cpp
	toyzpath.cpp
	toyzmatrix.cpp
	toyzregion.cpp
	toyzpicture.cpp
	)

TARGET_LINK_LIBRARIES(nemotoyz
	${PIXMAN_LIBRARIES}
	${FREETYPE_LIBRARIES}
	${HARFBUZZ_LIBRARIES}
	${SKIA_LIBRARIES}
	nemoasst
	nemohelper
	nemotool
	)

INSTALL(TARGETS nemotoyz DESTINATION lib${CMAKE_LIBRARY_SUFFIX})

set(HEADER_FILES
	${CMAKE_SOURCE_DIR}/toyz/nemotoyz.h
	)

set(NEMOTOYZ_PKGCONFIG_REQUIRES "nemoasst nemohelper nemotool pixman-1 freetype2 harfbuzz skia")

configure_file(
	nemotoyz.pc.in
	nemotoyz.pc
	@ONLY
	)

INSTALL(FILES ${HEADER_FILES} DESTINATION include/nemotoyz)
INSTALL(FILES ${CMAKE_BINARY_DIR}/toyz/nemotoyz.pc DESTINATION lib${CMAKE_LIBRARY_SUFFIX}/pkgconfig)
